/*
Copyright 2021 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax="proto3";

package dapr.proto.runtime.v1;

import "google/protobuf/timestamp.proto";

option csharp_namespace="Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname="DaprProtos";
option java_package="io.dapr.v1";
option go_package="github.com/liuxd6825/dapr/pkg/proto/runtime/v1;runtime";

////////////////////
message LoadEventRequest {
  string tenantId=1;
  string  aggregate_id=2;
}

message LoadEventResponse{
  message SnapshotDto {
    string aggregate_data=1;     // json format
    string aggregate_revision=2;
    uint64 sequence_number=3;
    string metadata=4;
  }

  message EventDto {
    string event_id=1;
    string event_data=2;  // json format
    string event_type=3;
    string event_version=4;
    uint64 sequence_number=5;
  }

  string tenant_id=1;
  string aggregate_id=2;
  SnapshotDto snapshot=3;
  repeated EventDto events=4;
}


message SaveSnapshotRequest{
  string tenant_id=1;
  string aggregate_id=2;
  string aggregate_type=3;
  string aggregate_data=4; // json format
  string aggregate_version=5;
  uint64 sequence_number=6;
  string metadata=7;
}

message SaveSnapshotResponse{

}


message ApplyEventRequest{
  string tenant_id=1;
  string aggregate_id=2;
  string aggregate_type=3;
  repeated EventDto events=4;
}

message ApplyEventResponse{

}

message CreateEventRequest{
  string tenant_id=1;
  string aggregate_id=2;
  string aggregate_type=3;
  repeated EventDto events=4;
}

message CreateEventResponse{

}

message DeleteEventRequest{
  string tenant_id=1;
  string aggregate_id=2;
  string aggregate_type=3;
  EventDto event=4;
}

message DeleteEventResponse{

}

message EventDto {
  string event_id=1;
  string command_id=2;
  string event_data=3;   // json format
  string event_type=4;
  string event_version=5;
  google.protobuf.Timestamp  event_time=6;
  string pubsub_name=7;
  string topic=8;
  string metadata=9;  // json format
  map<string, string> relations=10; // aggregate relations

}

message WriteEventLogRequest{
  string tenant_id=1;
  string id=2;
  string app_id=3;
  
  string class=4;
  string func=5;
  
  string level=6;
  google.protobuf.Timestamp  time=7;
  bool status=8;
  string message=9;

  string pub_app_id=10;
  string event_id=11;
  string command_id=12;
}

message WriteEventLogResponse{
}

message UpdateEventLogRequest {
  string tenant_id=1;
  string id=2;
  string app_id=3;
  string class=4;
  string func=5;
  string level=6;
  google.protobuf.Timestamp time=7;
  bool status=8;
  string message=9;
  string pub_app_id=10;
  string event_id=11;
  string command_id=12;
}

message UpdateEventLogResponse {
}

// GetLogByCommandId

message GetEventLogByCommandIdRequest {
  string tenant_id=1;
  string app_id=2;
  string command_id=3;
}

message GetEventLogByCommandIdResponse {

  message EventLogDto {
    string tenant_id=1;
    string id=2;
    string app_id=3;
    string class=4;
    string func=5;
    string level=6;
    google.protobuf.Timestamp time=7;
    bool status=8;
    string message=9;

    string pub_app_id=10;
    string event_id=11;
    string command_id=12;
  }

  repeated EventLogDto data=1;
}

//
message WriteAppLogRequest {
  string  tenant_id=1;
  string  id=2;
  string  app_id=3;
  string  class=4;
  string  func=5;
  string  level=6;
  google.protobuf.Timestamp time=7;
  bool status=8;
  string  message=9;
}

message WriteAppLogResponse {
}

message UpdateAppLogRequest {
  string  id=2;
  string  tenant_id=1;
  string  app_id=3;
  string  class =4;
  string  func =5;
  string  level =6;
  google.protobuf.Timestamp time=7;
  bool status=8;
  string  message=9;
}

message UpdateAppLogResponse {
}

// GetLogByCommandId

message GetAppLogByIdRequest {
  string  tenant_id=1;
  string  id=2;
}

message GetAppLogByIdResponse {
  string tenant_id=1;
  string id=2;
  string app_id =3;
  string class =4;
  string func =5;
  string level =6;
  google.protobuf.Timestamp time =7;
  bool status =8;
  string  message =9;
}

message GetRelationsRequest {
  string tenantId = 1;
  string aggregate_type = 2;
  string filter = 3;
  string sort = 4;
  uint64 pageNum = 5;
  uint64 pageSize = 6;
}


message GetRelationsResponse {
  repeated RelationDto data = 1;
  uint64 total_rows = 2;
  uint64 total_pages = 3;
  uint64 page_num = 4;
  uint64 page_size =5;
  string filter = 6;
  string sort =7;
  string error = 8;
  bool is_found = 9;
}

message RelationDto {
  string id = 1;
  string tenant_id= 2;
  string table_name =3;
  string aggregate_id = 4;
  bool is_deleted = 5;
  map<string, string> items=6;
}


